objects/OpportunityAttachment__c.object
<CustomObject>
    <description>SFDC1-661 Object to define what kind of attachment users are adding to an Opportunity</description>
    <fields>
        <fullName>AttachmentType__c</fullName>
        <description>SFDC1-661 to define what kind of attachment users are adding to an Opportunity</description>
        <inlineHelpText>Please select the kind of attachment you are adding to an Opportunity</inlineHelpText>
        <label>Attachment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Approval</fullName>
                </value>
                <value>
                    <fullName>End User Certificate</fullName>
                </value>
                <value>
                    <fullName>Final Proposal</fullName>
                </value>
                <value>
                    <fullName>Pricing Sheet</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Quote Created</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-661 Contract attachment comments</description>
        <inlineHelpText>Please add any comments related to this Opportunity attachment</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7594 This is a concatenation of the System and ID to ensure the number is unique, this field should be a unique external ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a concatenation of the System and ID to ensure the number is unique, this field should be a unique external ID.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7594 Record IDs from the legacy system Opportunity attachments, NOT unique</description>
        <externalId>true</externalId>
        <inlineHelpText>Record IDs from the legacy system Opportunity attachments</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7594 This is a friendly system reference to the source</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7594 This uses the Legacy System global picklist value set defined in SFDC1-6978</description>
        <inlineHelpText>Legacy System where this record was imported from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>SFDC1-661 Opportunity to which this contact attachment is associated</description>
        <inlineHelpText>Please select an opportunity to which this contact attachment is associated</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Attachments</relationshipLabel>
        <relationshipName>OpportunityAttachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Attachment</label>
    <nameField>
        <label>Opportunity Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Attachments</pluralLabel>
    <recordTypes>
        <fullName>NewBusiness</fullName>
        <active>true</active>
        <description>Opportunity Attachment Recordtype for New Business Opportunities only</description>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <description>Opportunity Attachment Recordtype for Renewal Opportunities only</description>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>